--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 github.client.id=8001a245cc2ff9985a75
 github.client.secret=65c7b9cf7f7fdb04321a93c42c5a52007e9fbef0
 github.redirect.uri=http://localhost:8080/callback
-spring.datasource.url=jdbc:mysql://localhost:3306/fourm
+spring.datasource.url=jdbc:mysql://localhost:3306/fourm?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=sanjinww0704@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
